@@ -105,7 +105,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
-                        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+                        <argLine>-Xmx512m</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
